--- a/html/index.html
+++ b/html/index.html
@@ -5,8 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 4 (Zach Dodson)</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    
+    <header>
+        <h1>Welcome to my Portfolio!</h1>
+    </header>
+    <main>
+        <div id="bio"></div>
+        <div id="skills"></div>
+        <div id="linkedin-link"><a href="https://www.linkedin.com/feed/" target="_blank"></a></div>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
