--- a/html/index.html
+++ b/html/index.html
@@ -12,9 +12,27 @@
         <h1>Welcome to my Portfolio!</h1>
     </header>
     <main>
-        <div id="bio"></div>
-        <div id="skills"></div>
-        <div id="linkedin-link"><a href="https://www.linkedin.com/feed/" target="_blank"></a></div>
+        <div id="picture">
+            <img src="../img/Suit Pic.jpg" alt="Zach wearing a suit" width="20%">
+        </div>
+        <div id="bio">
+            <p>I am a student at Penn State University majoring in (B.S.) Enterprise Technology Integration, minoring in Information Sciences and Technology, and pursuing a Smeal Business Fundamentals Certificate.</p>
+        </div>
+        <div id="skills">
+            <div class="carousel">
+                <div class="carousel-item">Content #1</div>
+                <div class="carousel-item">Content #2</div>
+                <div class="carousel-item">Content #3</div>
+                <nav class="carousel-nav">
+                    <span class="carousel-button"></span>
+                    <span class="carousel-button"></span>
+                    <span class="carousel-button"></span>
+                </nav>
+            </div>
+        </div>
+        <div id="linkedin-link">
+            <a href="https://www.linkedin.com/in/zachary-dodson-605531218/" target="_blank"><img src="../img/In-White-128-Γö¼┬½@2x.png" alt="My LinkedIn Page"></a>
+        </div>
     </main>
     <footer>
 
