added basic info about myself, still need to work on aligning everything

--- a/html/index.html
+++ b/html/index.html
@@ -12,24 +12,46 @@
         <h1>Welcome to my Portfolio!</h1>
     </header>
     <main>
-        <div id="picture">
-            <img src="../img/Suit Pic.jpg" alt="Zach wearing a suit" width="20%">
-        </div>
-        <div id="bio">
-            <p>I am a student at Penn State University majoring in (B.S.) Enterprise Technology Integration, minoring in Information Sciences and Technology, and pursuing a Smeal Business Fundamentals Certificate.</p>
-        </div>
-        <div id="skills">
-            <div class="carousel">
-                <div class="carousel-item">Content #1</div>
-                <div class="carousel-item">Content #2</div>
-                <div class="carousel-item">Content #3</div>
-                <nav class="carousel-nav">
-                    <span class="carousel-button"></span>
-                    <span class="carousel-button"></span>
-                    <span class="carousel-button"></span>
-                </nav>
+        <div id="main-info">
+            <div id="column-1" class="column">
+                <img src="../img/Suit Pic.jpg" alt="Zach wearing a suit" width="200px">
+            </div>
+
+            <div id="column-2" class="column">
+                <div id="bio" class="row" style="text-align: center;">
+                    <h3>Bio</h3>
+                    <p>I am a student at Penn State University majoring in (B.S.) Enterprise Technology Integration, minoring in Information Sciences and Technology, and pursuing a Smeal Business Fundamentals Certificate.</p>
+                </div>
+
+            
+                <div id="skills" class="row">
+                    <h3>Skills</h3>
+                    <ul id="center-list">
+                        <li>Web Development</li>
+                        <ul>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>JavaScript</li>
+                        </ul>
+                        <li>Programming</li>
+                            <ul>
+                                <li>Java</li>
+                            </ul>
+                        <li>Databases</li>
+                            <ul>
+                                <li>MySQL</li>
+                            </ul>
+                        <li>Other</li>
+                            <ul>
+                                <li>GIT / GitHub</li>
+                                <li>Cable Infrastructure</li>
+                                <li>IT Operations</li>
+                            </ul>
+                    </ul>
+                </div>
             </div>
         </div>
+
         <div id="linkedin-link">
             <a href="https://www.linkedin.com/in/zachary-dodson-605531218/" target="_blank"><img src="../img/In-White-128-Γö¼┬½@2x.png" alt="My LinkedIn Page"></a>
         </div>
